--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "test": "ava",
-    "go": "npx ts-node --esm src/index.ts",
-    "dev": "npx tsc -w"
+    "test": "ava -w",
+    "go": "npx ts-node --esm src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "dependencies": {
-    "class-transformer": "^0.5.1"
-  },
   "ava": {
     "extensions": {
       "ts": "module"
@@ -37,5 +33,9 @@
   },
   "ts-node": {
     "esm": true
+  },
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "dataclass": "^2.1.1"
   }
 }
