--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "module": "ESNext",                    
-    "lib": ["DOM", "ES2019"],
+    "module": "ES2020",                    
+    "lib": ["DOM", "ES2020"],
     "moduleResolution": "node",
-    "target": "ESNext",
+    "target": "ES2020",
     "allowJs": true,
+    "outDir": "build",
     "rootDir": "src",
     "strict": true,         
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "noEmit": true
 }
