Add a simple `JSONStore`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
     "target": "ES2020",
     "allowJs": true,
     "outDir": "build",
-    "rootDir": "src",
     "strict": true,         
     "noImplicitAny": true,
     "esModuleInterop": true,
@@ -14,5 +13,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
   },
-  "noEmit": true
+  "noEmit": true,
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
